with template